[package]
name = "growl-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-cognitoidentityprovider = "1.114.0"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
serde = {version = "1.0", features = ["derive"] }
dotenv = "0.15"
reqwest = { version = "0.13", features = ["json"] }
async-trait = "0.1"
