[package]
name = "growl-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-cognitoidentityprovider = "1.114.0"
aws-sdk-sns = "1.98.0"
aws-sdk-ses = "1.100.0"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
serde = {version = "1.0", features = ["derive"] }
dotenv = "0.15"
reqwest = { version = "0.13", features = ["json"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
slog = { version = "2.8.2", features = ["max_level_trace", "release_max_level_info"] }
slog-term = "2.9.2"
slog-async = "2.8.0"
rand = "0.9"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-aws-lc-rs",
    "postgres",
    "macros",
    "uuid",
    "time",
    "tls-rustls",
    "chrono",
    "json"
] }
sha2 = "0.11.0"
hmac = "0.13.0"
base64 = "0.22.1"
